# project-init

./: .coverage  .gitignore  .gitleaks.toml  404.html  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  LIGHTRAG_REVIEW.md  PLAN-276-governance.md  PLAN-REVIEW-LOG-276-governance.md  README.md  cliff.toml  codex_evaluation.md  codex_review.md  index.html  install.sh  justfile  link  mkdocs.yml  pyproject.toml  renovate.json  sitemap.xml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: dag-workflow.py  dag_workflow.py  github-command-guard.sh  github_command_guard.sh  pre-merge-ci-check.sh  workflow-state-reminder.sh  workflow_state_reminder.sh
.claude/scripts/: create-nojira-pr.sh  finish-pr.sh  finish_pr.sh  monitor-pr.sh  monitor_pr.sh  promote-review.sh  push-branch.sh  push_wiki.sh
.claude/skills/: INDEX.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  docs.yml  feature.yml  test.yml
.github/workflows/: board-automation.yml  ci.yml  docs.yml  release.yml  review-status.yml  third-party-updates.yml  validate-pr.yml
adr/adr-001-scaffolder-design/: index.html
adr/adr-002-dotglob-template-convention/: index.html
adr/adr-003-github-native-workflow/: index.html
adr/adr-004-obsidian-docs-integration/: index.html
adr/adr-005-github-pr-board-workflow/: index.html
adr/adr-006-conventional-commit-titles/: index.html
adr/adr-007-security-enforcement-layers/: index.html
adr/adr-008-distribution-channel/: index.html
adr/adr-009-graphify-memory-preset/: index.html
adr/adr-010-plugin-marketplace-dual-ship/: index.html
adr/adr-011-pypi-trusted-publishing/: index.html
adr/adr-012-prod-safety-guard/: index.html
development/build-reproducibility/: index.html
development/contributing/: index.html
development/template-system/: index.html
development/testing/: index.html
docs/: README.md  linear_issue_plan.md  positioning.md
docs/adr/: adr-001-scaffolder-design.md  adr-002-dotglob-template-convention.md  adr-003-github-native-workflow.md  adr-004-obsidian-docs-integration.md  adr-005-github-pr-board-workflow.md  adr-006-conventional-commit-titles.md  adr-007-security-enforcement-layers.md  adr-008-distribution-channel.md  adr-009-graphify-memory-preset.md  adr-010-plugin-marketplace-dual-ship.md  adr-011-pypi-trusted-publishing.md  adr-012-prod-safety-guard.md  adr-013-distribution-governance-model.md  adr-014-environment-promotion-chains.md  adr-015-env-deploy-model.md  adr-016-model-agnostic-switching.md  adr-017-per-surface-config-generator.md  adr-018-ai-governance-overlay.md  adr-019-local-observability-overlay.md  adr-020-memory-backend-decomposition.md  adr-021-quality-vs-lifecycle-tier-boundary.md  adr-022-toolchain-gate-map.md  adr-023-wizard-explanation-standard.md  adr-024-memory-tier-model.md  adr-025-agentic-os-root-layer.md  adr-026-tier3-rag-engine-cocoindex.md
docs/development/: agentic-os-root-layer.md  build-reproducibility.md  contributing.md  enforcement-classification.md  enterprise-github-support-matrix.md  measurement-methodology.md  memory-descriptor.md  mobile-remote-access.md  non-cli-surface-matrix.md  template-system.md  testing.md
docs/guides/: org-fork-lifecycle.md  using-project-init.md
docs/research/: model-agnostic-switching.md
examples/python-project/: CLAUDE.md
guides/using-project-init/: index.html
scripts/: linear_sync.py
search/: search_index.json
src/project_init/: __init__.py  __main__.py  capabilities.py  concerns.py  governance.py  mcps.py  migration_notes.py  scaffold.py  surfaces.py  upgrade.py
templates/base/: AGENTS.md.tmpl  CLAUDE.md.tmpl  CONTRIBUTING.md.tmpl  Dockerfile.tmpl  GEMINI.md.tmpl  LICENSE.tmpl  SECURITY.md.tmpl  bunfig.toml.tmpl  clippy.toml.tmpl  compose.yaml.tmpl  dot_dockerignore.tmpl  dot_env.example.tmpl  dot_gitignore.tmpl  dot_golangci.yml.tmpl  eslint.config.mjs.tmpl  justfile.tmpl  mise.toml.tmpl  mkdocs.yml.tmpl  mypy.ini.tmpl  renovate.json  renovate.json.tmpl  ruff.toml.tmpl  rustfmt.toml.tmpl  tsconfig.base.json.tmpl  tsconfig.json.tmpl  typedoc.json.tmpl
templates/presets/: auto.toml  core.toml  governed.toml  obsidian-graphify.toml  obsidian-lightrag.toml  obsidian-lightrag.yaml  obsidian-only.toml  obsidian-only.yaml
tests/: conftest.py  helpers.py  test_cli.py  test_hooks_and_safety.py  test_integrity.py  test_issue_metadata_workflow.py  test_lightrag_scripts.py  test_packaging.py  test_presets.py  test_scaffold.py  test_scaffold_obsidian.py  test_skill_index.py  test_templates.py
tests/contracts/: test_agent_overlays.py  test_agents_canonical.py  test_benchmark_cost_latency.py  test_benchmark_harness.py  test_benchmark_report.py  test_benchmark_scoring.py  test_capabilities.py  test_cross_stack_examples.py  test_deploy_overlay.py  test_docs_renovate.py  test_emission_hardening.py  test_enforcement.py  test_enterprise_host.py  test_env_tooling.py  test_governance.py  test_governance_overlay.py  test_governance_product.py  test_hook_portability.py  test_iac_overlay.py  test_integration_seam.py  test_integrity.py  test_interpreter_portability.py  test_justfile.py  test_library_release.py  test_lifecycle_byte_identity.py  test_lifecycle_none.py  test_marketplace_source.py  test_memory_byte_identity.py  test_memory_none.py  test_multi_model_overlay.py  test_no_bytecode_leak.py  test_no_egress.py  test_observability_overlay.py  test_observability_report.py  test_observability_self_log.py  test_package_guard.py  test_parity_bundle.py  test_plugin_marketplace.py  test_portability_hardening.py  test_post_edit_lint_typecheck.py  (+18 more)
tests/integration/: test_cli.py  test_code_map.py  test_combination_matrix.py  test_compose_interop.py  test_concern_add_remove.py  test_concern_skill_gating.py  test_consent.py  test_dag_workflow.py  test_hooks_and_safety.py  test_install_script.py  test_issue_metadata_workflow.py  (+13 more)
tools/: check_third_party_updates.py  pinned_third_party.toml  propose_third_party_bumps.sh  sync_plugin.py
(+331 files in other folders)
