[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-init"
version = "0.1.0"
description = "Scaffolder for agentic-development infrastructure inside any project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vytautas Čepas", email = "vyt.cepas.ve@gmail.com" }]
keywords = ["claude-code", "agents", "scaffolding", "obsidian", "lightrag"]

dependencies = [
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
project-init = "project_init.__main__:main"

[project.urls]
Repository = "https://github.com/VytCepas/project-init"

[tool.hatch.build.targets.wheel]
packages = ["src/project_init"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "project_init/templates"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
