[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-init"
version = "0.2.0"
description = "Scaffolder for agentic-development infrastructure inside any project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vytautas Čepas", email = "vyt.cepas.ve@gmail.com" }]
keywords = ["claude-code", "agents", "scaffolding", "obsidian", "lightrag"]

dependencies = [
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-xdist>=3.0",
]
docs = [
    "mkdocs-material>=9.7.6",
]

[project.scripts]
project-init = "project_init.__main__:main"

[project.urls]
Repository = "https://github.com/VytCepas/project-init"

[tool.hatch.build.targets.wheel]
packages = ["src/project_init"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "project_init/templates"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# D/C901/PLR091x dogfood the quality toolchain scaffolded into target
# projects (PI-138): enforced docstrings and mechanical complexity gates.
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "D", "C901", "PLR0912", "PLR0913", "PLR0915"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Test names are self-describing; docstring enforcement adds noise not value.
"tests/**" = ["D"]
# Agent infrastructure (hooks/scripts), not project code — the quality gates
# target the code a project ships. Scaffolded ruff.toml mirrors this.
".claude/**" = ["D", "C901", "PLR0912", "PLR0913", "PLR0915"]
"templates/**" = ["D", "C901", "PLR0912", "PLR0913", "PLR0915"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure Python logic and small rendering checks with no subprocesses",
    "contract: scaffolded template and documentation contract checks",
    "integration: CLI, hook, or scaffolded script behavior using subprocesses",
    "smoke: packaging or installed-artifact end-to-end smoke checks",
    "optional_dependency: tests that require dependencies outside the default dev extra",
]
